--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
+body {
+	background-color: #fecd45;
+	font-family: 'Bakbak One', cursive;
+	text-align: center;
+}
 
+h1 {
+	color: #2568fb;
+	font-family: 'Bakbak One', cursive;
+	text-align: center;
+}
+
+p {
+	color: black;
+}
+
+.tenor-gif-embed {
+	margin-left: auto;
+	margin-right: auto;
+}
