--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,14 @@ body {
 	text-align: center;
 }
 
+div.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
+
 h1 {
 	color: white;
 	font-family: 'Orbitron', sans-serif;
