--- a/css/styles.css
+++ b/css/styles.css
@@ -221,7 +221,7 @@ footer a:hover {
 
 .skills {
   margin-top: 14rem;
-  text-align: center;
+  text-align: left;
 }
 
 /*# sourceMappingURL=styles.css.map */
